basic broker functionality

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,10 +11,15 @@ provider:
 functions:
   app:
     handler: index.handler
+    environment:
+      AWS_REGION: us-east-1
+      S3_BUCKET: image-tile-mart
+      S3_PATH_TILE_CACHE: tile-cache
+      S3_PATH_STYLE_CONFIG: style-config
     events:
       - http: 'ANY /'
 
-  sayHello:
+  fetchTile:
     handler: index.handler
     events:
-      - http: 'GET /hello'
+      - http: 'GET /tiles/{tilesetId}/{z}/{x}/{y}.png'
