--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "dependencies": {
     "aws-sdk": "^2.1126.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.0",
     "serverless-http": "^3.0.1"
+  },
+  "scripts": {
+    "prettify": "prettier --write ./index.ts",
+    "start": "serverless offline",
+    "deploy": "serverless deploy"
   }
 }
