--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.6.2",
-    "serverless-offline": "^8.7.0",
+    "serverless-offline": "^8.5.0",
     "serverless-plugin-typescript": "^2.1.2",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "aws-sdk": "^2.1126.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "serverless-http": "^3.0.1"
